# mrvillage-ui

./: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  postcss.config.js  tailwind.config.js
css/: components.css  input.css  utilities.css
css/components/: button.css  input.css
src/: consts.rs  lib.rs
src/components/: button.rs  checkbox.rs  mod.rs  number_input.rs  text_input.rs
