[package]
name = "mrvillage-ui"
version = "0.1.0"
edition = "2021"
include = ["/css"]

[dependencies]
tracing = "0.1"

[dependencies.leptos]
git = "https://github.com/leptos-rs/leptos.git"
branch = "main"
# version = "0.5"
features = ["rustls", "serde", "nightly"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
