[package]
name = "mrvillage-ui"
version = "0.1.0"
edition = "2021"
include = ["/css"]

[dependencies]
tracing = "0.1"
wasm-bindgen = "0.2"

[dependencies.leptos]
git = "https://github.com/leptos-rs/leptos.git"
branch = "main"
features = ["rustls", "serde", "nightly"]

[dependencies.leptos-tabler-icons]
git = "https://github.com/mrvillage/leptos-tabler-icons.git"
branch = "master"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
